# OptiVolume

./: README.md  environment.yml  pyproject.toml
arxiv/: environment.yml
examples/01_basic_usage/: v1_visulization_mayavi copy.py  v2_beads_imaging.py  v3_save_and_load_geom_objects.py  v4_optim_w_pytorch.ipynb
optical_volume/: __init__.py  geometry.py  propagator.py  torch_cwfs.py  utils.py  visualization.py
src/optical_volume/optics/: __init__.py  lens.py  phase_mask.py  propagator.py  system.py  utils.py
src/optical_volume/scene/: __init__.py  grid.py  shapes.py  torch_geometry.py  transforms.py  volume.py
