[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optical-volume"
version = "0.1.0"
description = "Creates a 3D RI volume composed of primitive specimens and provides optical tools to image the volume."
authors = [
  { name="Syed Kazim", email="kazimsyed4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
 "numpy>=1.24",
 "scipy>=1.10",
 "torch>=2.4.0",
 "torchvision>=0.19.1"
]

[tool.setuptools.packages.find]
where = ["."]
